# moonlight-xbox

./: .clang-format  .gitignore  .gitmodules  App.xaml  App.xaml.cpp  App.xaml.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  DirectXDecoder.cpp  DirectXDecoder.h  DirectXPage.xaml  DirectXPage.xaml.cpp  DirectXPage.xaml.h  FFMpegDecoderOld.cpp  FFMpegDecoderOld.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FramePacer.cpp  FramePacer.h  KeyboardCommon.cpp  KeyboardControl.xaml  KeyboardControl.xaml.cpp  KeyboardControl.xaml.h  MDNSHandler.cpp  MenuPage.xaml  MenuPage.xaml.cpp  MenuPage.xaml.h  MoonlightClient.cpp  MoonlightClient.h  MoonlightWelcome.xaml  MoonlightWelcome.xaml.cpp  MoonlightWelcome.xaml.h  PRIVACY-POLICY.md  Package.appxmanifest  README.md  StreamPage.xaml  StreamPage.xaml.cpp  StreamPage.xaml.h  TODO  (+21 more)
Client/: MoonlightClient.cpp  MoonlightClient.h  StreamConfiguration.cpp  StreamConfiguration.h
Common/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.cpp  DirectXHelper.h  ModalDialog.xaml  ModalDialog.xaml.cpp  ModalDialog.xaml.h  StepTimer.h  TextConsole.cpp  TextConsole.h  imconfig.moonlight.h
Content/: LogRenderer.cpp  LogRenderer.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  SamplePixelShader.hlsl  SampleVertexShader.hlsl  StatsRenderer.cpp  VideoRenderer.cpp  VideoRenderer.h
Converters/: BoolToTextConverter.cpp  BoolToTextConverter.h
Keyboard/: KeyboardCommon.h  kbda1.cpp  kbda2.cpp  kbda3.cpp  kbdal.cpp  kbdarme.cpp  kbdarmw.cpp  kbdaze.cpp  kbdazel.cpp  kbdbe.cpp  kbdbga.cpp  kbdbgt.cpp  kbdblr.cpp  kbdbr.cpp  kbdbu.cpp  kbdbur.cpp  kbdcan.cpp  kbdcr.cpp  kbdcz.cpp  kbdcz1.cpp  kbdda.cpp  kbddv.cpp  kbdeo.cpp  kbdest.cpp  kbdfc.cpp  kbdfi.cpp  kbdfr.cpp  kbdgeo.cpp  kbdgerg.cpp  kbdgneo.cpp  kbdgr.cpp  kbdgr1.cpp  kbdhe.cpp  kbdheb.cpp  kbdhu.cpp  kbdic.cpp  kbdinasa.cpp  (+47 more)
libgamestream/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-uwp.bat  client.c  client.h  cmake_install.cmake  gamestream.vcxproj  gamestream.vcxproj.filters  http.c  http.h  libgamestream.sln  mkcert.c  moonlight-common.vcxproj  moonlight-common.vcxproj.filters  winrt.h  xml.c
(+98 files in other folders)
